Reverted dark mode + mobile fixes

--- a/2048/style/main.scss
+++ b/2048/style/main.scss
@@ -87,8 +87,8 @@ html, body {
   margin: 0;
   padding: 0;
 
-  background: #222;
-  color: #e5e3dc;
+  background: #faf8ef;
+  color: $text-color;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px;
 }
@@ -609,17 +609,4 @@ hr {
       margin-top: 30px !important;
     }
   }
-}
-
-div.score-container, div.score-container::after {
-  color: #222;
-}
-div.best-container, div.best-container::after {
-  color: #222;
-}
-div.tile-inner {
-  color: #222;
-}
-.game-over p, .game-won p {
-  color: #222;
 }
